--- a/flutter_news/pubspec.yaml
+++ b/flutter_news/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^5.0.0
   http: ^1.2.1
   cached_network_image: ^3.3.1
   url_launcher: ^6.2.4
